--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,13 @@
-# disable host ssh key checking 
+# disable host ssh key checking
 [defaults]
 host_key_checking = False
 
+inventory = ~/altschool-exam-playbook/inventories/dev/hosts
+remote_user = controller
+private_key_file = ~/.ssh/control_node
+
+[privilege_escalation]
+become=true
+become_method=sudo
+become_user=root
+become_ask_pass=False
