modify playbooks to use group_vars

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,11 @@
-# disable host ssh key checking
 [defaults]
-host_key_checking = False
-
-inventory = ~/altschool-exam-playbook/inventories/dev/hosts
-remote_user = controller
-private_key_file = ~/.ssh/control_node
+#inventory = /home/controller/altschool-exam-playbook/inventories/dev/hosts
+remote_user = johnpaul_ugwulo
+private_key_file = /home/controller/.ssh/control_node
+#roles_path = /home/controller/altschool-exam-playbook/roles
 
 [privilege_escalation]
-become=true
+become=yes
 become_method=sudo
 become_user=root
-become_ask_pass=False
+become_ask_pass=true
